# Dots-TTS-ComfyUI

./: .gitignore  README.md  README_ZH.md  __init__.py  pyproject.toml  requirements.txt  runtime_adapter.py
dots_tts/: cli.py
dots_tts/models/dots_tts/: model.py
example_workflows/: dots.tts_example_workflow.json
